# CrytoTool

./: .gitignore  .opencode-pr-test.md  AGENTS.md  App.tsx  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CryptoTest.tsx  LICENSE  README.md  RELEASE.md  SECURITY.md  architecture.md  capacitor.config.json  capacitor.config.ts  generate-icons.js  index.css  index.html  index.tsx  metadata.json  package-lock.json  package.json  tailwind.config.js  tsconfig.json  types.ts  vite.config.ts  vitest.config.ts
. GitHub/workflows/: android-release.yml
.GitHub/: ARCHITECTURE.md  CONTRIBUTING.md  README.md  SECURITY.md
.clusterfuzzlite/: Dockerfile  build.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  security_vulnerability.md
.github/codeql/: codeql-config.yml
.github/workflows/: android-build.yml  build.yml  capacitor-build.yml  cargo-audit.yml  ci.yml  cleanup-runs.yml  codeql.yml  crate-patrol.yml  crypto-finder.yml  fuzz.yml  linux-arm64.yml  linux-build.yml  linux-x86_64.yml  macos-build.yml  npm-audit.yml  opengrep.yml  publish.yml  release.yml  release.yml.txt  scorecard.yml  security.yml  supply-chain-vigilante.yml  tauri-android.yml  tauri-linux.yml  tauri-macos.yml  (+6 more)
CrytoTool-main/: README.md  index.css  index.html  index.tsx  tailwind.config.js  tsconfig.json  types.ts  vite.config.ts
components/: AuthScreen.tsx  AutoDestructCountdown.tsx  CopyMoveModal.tsx  CustomColorPicker.tsx  CustomSelect.tsx  CustomizeModal.tsx  Dashboard.tsx  DecryptModal.tsx  EncryptionModal.tsx  FileActionMenu.tsx  FileItem.tsx  FullPlayer.tsx  LandingPage.tsx  LiquidGlassOverlay.tsx  PinModal.tsx  RecoveryCodesModal.tsx  SplashScreen.tsx  TopActions.tsx  ui.tsx
crypto-core/: Cargo.toml  README.md  db.ts  index.ts
crypto-core/fuzz/: Cargo.toml
crypto-core/fuzz/fuzz_targets/: aes_gcm_roundtrip.rs  base64_roundtrip.rs
crypto-core/src/: aead.rs  aes_ctr.rs  backup_crypto.rs  chacha_salsa.rs  crypto.rs  kdf.rs  key_wrapping.rs  lib.rs  metadata_crypto.rs  platform.rs  sanitize.rs  security.rs  stream.rs  threat_model.rs  vault_storage.rs  wasm_bindings.rs
docs/: API.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  DEVELOPMENT.md  README.md  RELEASE.md  SECURITY.md  SECURITY_AUDIT.md  architecture.md
locales/: ar.ts  bg.ts  bn.ts  bs.ts  ca.ts  cs.ts  da.ts  de.ts  el.ts  en.ts  es.ts  et.ts  eu.ts  fa.ts  fi.ts  fr.ts  gl.ts  he.ts  hi.ts  hr.ts  hu.ts  id.ts  index.ts  is.ts  it.ts  ja.ts  jv.ts  ko.ts  lt.ts  lv.ts  mk.ts  ml.ts  ms.ts  nl.ts  no.ts  pa.ts  pl.ts  pt.ts  ro.ts  ru.ts  (+13 more)
src-tauri/: Cargo.toml  Info.ios.plist  crytotool.desktop  privon.desktop  tauri.conf.json
src-tauri/capabilities/: default.json  keyring.json
src-tauri/icon-sources/: icon-manifest.json
src-tauri/icons/: icon.icns
src-tauri/patched-plugins/tauri-plugin-biometry/: Cargo.toml  build.rs
src-tauri/patched-plugins/tauri-plugin-biometry/android/: build.gradle.kts
src-tauri/patched-plugins/tauri-plugin-biometry/android/src/main/java/app/tauri/biometry/: BiometryPlugin.kt
src-tauri/patched-plugins/tauri-plugin-biometry/permissions/autogenerated/: reference.md
src-tauri/patched-plugins/tauri-plugin-biometry/permissions/autogenerated/commands/: get_data.toml  has_data.toml  remove_data.toml  set_data.toml
src-tauri/patched-plugins/tauri-plugin-biometry/permissions/schemas/: schema.json
src-tauri/patched-plugins/tauri-plugin-biometry/src/: commands.rs  desktop.rs  error.rs  lib.rs  macos.rs  mobile.rs  models.rs  windows.rs
src-tauri/src/: biometric_android.rs  lib.rs
styles/: fonts-imports.ts  fonts.ts  glass.css  themes.ts
utils/: backupCrypto.ts  biometric.ts  crypto.ts  cryptoPrimitives.ts  db.ts  fonts.ts  i18n.ts  i18nContext.tsx  keyWrapping.ts  metadataCrypto.ts  platform.ts  sanitize.ts  security.ts  streamCrypto.ts  vaultKey.ts  vaultStorage.ts
(+106 files in other folders)
