[package]
name = "crypto-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
wasm = ["wasm-bindgen"]

[dependencies]
wasm-bindgen = { version = "0.2", optional = true }

aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"

aes = "0.8"
ctr = "0.9"
hmac = "0.12"
sha2 = "0.10"
hkdf = "0.12"
subtle = "2"

chacha20poly1305 = "0.10"
xsalsa20poly1305 = "0.9"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

thiserror = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
getrandom = "0.2"
