[package]
name = "crypto-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
wasm-bindgen = "0.2"

aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }

aes = "0.8"
ctr = "0.9"
hmac = "0.12"
sha2 = "0.10"
hkdf = "0.12"
subtle = "2"

chacha20poly1305 = "0.10"
xsalsa20poly1305 = "0.9"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

thiserror = "1"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
