[package]
name = "crytotool"
version = "2.5.0"
description = "All-in-One Privacy no tracking no ads no data collection choose from 6 algorithms"
authors = ["ObscuritySecurity"]
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crypto-core = { path = "../crypto-core" }

[target.'cfg(not(target_os = "android"))'.dependencies]
tauri-plugin-keyring = "0.1.0"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
